--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "new-era-project",
+  "homepage": "https://OlehKozubJS.github.io/new-era-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
