--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-era-project",
-  "homepage": "https://OlehKozubJS.github.io/new-era-project/",
+  "homepage": "https://OlehKozubJS.github.io/react-gh-pages/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
