--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "new-era-project",
-  "homepage": "https://OlehKozubJS.github.io/react-gh-pages/",
+  "homepage": "https://OlehKozubJS.github.io/new-era-project/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
