--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
+    "test": "react-scripts test",
     "build": "react-scripts build"
   },
   "keywords": [],
